# chat

./: .env  Cargo.toml  cliff.toml
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/fixtures/: decoding.pem
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yml  chat.yaml  test.rest
chat_server/fixtures/: encoding.pem  test.sql
chat_server/src/: config.rs  errors.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  messages.rs  mod.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/tests/: chat.rs
migrations/: 20240605225309_initial.sql  20240616012300_workspace.sql  20240629055406_trigger.sql
notify_server/: Cargo.toml  index.html  notify.yaml
notify_server/src/: config.rs  errors.rs  lib.rs  main.rs  notify.rs  sse.rs
src/: config.rs  main.rs
src/handlers/: auth.rs  chat.rs  messages.rs
