[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "macros", "query", "tracing", "multipart"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = "0.7.4"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "net", "macros", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
