[workspace]
members = [ "chat_core","chat_server", "notify_server"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "macros", "query", "tracing", "multipart"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = "0.7.4"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "net", "macros", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.38", features = ["serde"] }
axum-extra = { version = "0.9.3", features = ["typed-header", "multipart"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-full", "trace"] }
jwt-simple = "0.12"
