[package]
name = "chat_core"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = {workspace=true}
anyhow = {workspace=true}
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls","chrono"] }
chrono={workspace=true}
serde = {workspace=true}
axum-extra={workspace = true}
tracing = {workspace=true}
tower = {workspace=true}
tower-http =  {workspace=true}
tokio = {workspace=true}
futures-util = "0.3.30"
jwt-simple = {workspace=true}
uuid = { version = "1.8.0", features = ["v7", "serde"] }



[dev-dependencies]
http-body-util = "0.1.2"
