[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace=true}
argon2 = { version = "0.5.3", features = ["std"] }
axum = {workspace=true}
chrono = { version = "0.4.38", features = ["serde"] }
serde = {workspace=true}
serde_yaml = {workspace=true}
jwt-simple = "0.12"
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls","chrono"] }
thiserror = {workspace=true}
tokio = {workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
serde_json = "1.0.117"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-full", "trace"] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
futures-util = "0.3.30"
axum-extra = { version = "0.9.3", features = ["typed-header"] }


[dev-dependencies]
sqlx-db-tester = "0.4.2"
http-body-util = "0.1.2"
