[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace=true}
argon2 = { version = "0.5.3", features = ["std"] }
axum = {workspace=true}
serde = {workspace=true}
serde_yaml = {workspace=true}
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls","chrono"] }
thiserror = {workspace=true}
tokio = {workspace=true}
chrono={workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
serde_json = "1.0.117"
tower = {workspace=true}
tower-http =  {workspace=true}
sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.4"
axum-extra={workspace = true}
chat_core = { path = "../chat_core" }
jwt-simple = {workspace=true}


[dev-dependencies]
sqlx-db-tester = "0.4.2"
http-body-util = "0.1.2"
