[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
anyhow = {workspace=true}
argon2 = { version = "0.5.3", features = ["std"] }
axum = {workspace=true}
serde = {workspace=true}
serde_yaml = {workspace=true}
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls","chrono"] }
thiserror = {workspace=true}
tokio = {workspace=true}
chrono={workspace=true}
tracing = {workspace=true}
tracing-subscriber = {workspace=true}
serde_json = "1.0.117"
tower = {workspace=true}
tower-http =  {workspace=true}
sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.4"
http-body-util = { version = "0.1.1", optional = true }
sqlx-db-tester = { version = "0.4.2", optional = true }
axum-extra={workspace = true}
chat_core = { workspace = true }
jwt-simple = {workspace=true}




[dev-dependencies]
chat_server = { workspace = true, features = ["test-util"] }
